app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sbs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sbs
  name: app1-deployment
  labels:
    app.kubernetes.io/name: app1
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app1
  replicas: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app1
    spec:
      containers:
      - image: 206667208055.dkr.ecr.ap-southeast-2.amazonaws.com/app:latest
        imagePullPolicy: Always
        name: app1
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  namespace: sbs
  name: app1-svc
  labels:
    app.kubernetes.io/name: app1
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sbs
  name: alb
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app.kubernetes.io/name: app1
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app1-svc
              port:
                number: 80
